--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,8 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
+charset = utf-8
 
 # 4 space indentation
 [*.java]
