--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,10 @@ charset = utf-8
 indent_style = tab
 indent_size = 4
 
-# Tab indentation (no size specified)
+[*.scala]
+indent_style = tab
+indent_size = 4
+
 [pom.xml]
 indent_style = tab
 indent_size = 4
