--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>eu.stratosphere</groupId>
-			<artifactId>stratosphere-java</artifactId>
-			<version>0.4</version>
+			<artifactId>stratosphere-scala</artifactId>
+			<version>0.5-rc2</version>
 		</dependency>
 		<dependency>
 			<groupId>eu.stratosphere</groupId>
 			<artifactId>stratosphere-clients</artifactId>
-			<version>0.4</version>
+			<version>0.5-rc2</version>
 		</dependency>
 		 <dependency>
 			<groupId>junit</groupId>
