--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,16 @@
 			<version>1.4.7</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4s</groupId>
+			<artifactId>slf4s-api_2.10</artifactId>
+			<version>1.7.6</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_2.10</artifactId>
 			<version>2.1.6</version>
