--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
 		<dependency>
 			<groupId>eu.stratosphere</groupId>
 			<artifactId>stratosphere-scala</artifactId>
-			<version>0.5-rc2</version>
+			<version>0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>eu.stratosphere</groupId>
 			<artifactId>stratosphere-clients</artifactId>
-			<version>0.5-rc2</version>
+			<version>0.5</version>
 		</dependency>
 		 <dependency>
 			<groupId>junit</groupId>
