--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>concurrent-trees</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.tototoshi</groupId>
+			<artifactId>scala-csv_2.10</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 		<!-- logging framework logback -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
