--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,11 @@
 			<artifactId>lucene-analyzers-common</artifactId>
 			<version>4.8.1</version>
 		</dependency>
-		<!-- for the trie data structure -->
+		<!-- configuration management -->
 		<dependency>
-			<groupId>com.googlecode.concurrent-trees</groupId>
-			<artifactId>concurrent-trees</artifactId>
-			<version>2.4.0</version>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+			<version>1.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.tototoshi</groupId>
