Add name for configs.
Former-commit-id: 0234d1c94ce7ab4dc993f3e9b5bfc55ca19a2adc

--- a/src/main/resources/standard.conf
+++ b/src/main/resources/standard.conf
@@ -1,4 +1,5 @@
 {
+	name: "First chunk file",
 	base_path: "src/test/resources/",
 	dump_file: "chunk_dump.wikirun",
 	// whether to print the runtime estimation
