--- a/src/main/resources/standard.conf
+++ b/src/main/resources/standard.conf
@@ -1,5 +1,6 @@
 {
 	name: "First chunk file",
+	is_production: false,
 	base_path: "src/test/resources/",
 	dump_file: "chunk_dump.wikirun",
 	// whether to print the runtime estimation
