--- a/src/main/resources/standard.conf
+++ b/src/main/resources/standard.conf
@@ -2,6 +2,7 @@
 	name: "First chunk file",
 	is_production: false,
 	base_path: "src/test/resources/",
+	output_files_dir: ${user.dir},
 	dump_file: "chunk_dump.wikirun",
 	// whether to print the runtime estimation
 	print_approximation: true
