--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<version>3.9</version>
 		</dependency>
 		<dependency>
+			<groupId>org.sweble.wikitext</groupId>
+			<artifactId>swc-engine</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
