Main program restructuring.
Former-commit-id: e96631ef3406240e1ed11a6a1bd7c6bb6bbf692c

--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
 					<launchers>
 						<launcher>
 							<id>Wikipedia Training Task</id>
-							<mainClass>de.uni_potsdam.hpi.coheel.Main</mainClass>
+							<mainClass>de.uni_potsdam.hpi.coheel.FlinkProgramRunner</mainClass>
 							<args>
 								<arg>arg1</arg>
 							</args>
