--- a/src/main/resources/standard.conf
+++ b/src/main/resources/standard.conf
@@ -1,9 +1,8 @@
 {
 	name: "First chunk file",
-	is_production: false,
+  program: "main"
 	base_path: "src/test/resources/",
 	output_files_dir: ${user.dir},
 	dump_file: "chunk_dump.wikirun",
-	// whether to print the runtime estimation
 	print_approximation: true
 }
