--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>eu.stratosphere</groupId>
-			<artifactId>stratosphere-scala</artifactId>
-			<version>0.5.2</version>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-scala</artifactId>
+			<version>0.6-incubating</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.stratosphere</groupId>
-			<artifactId>stratosphere-clients</artifactId>
-			<version>0.5.2</version>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-clients</artifactId>
+			<version>0.6-incubating</version>
 		</dependency>
 		<dependency>
 			<groupId>org.sweble.wikitext</groupId>
