--- a/src/main/resources/chunk.conf
+++ b/src/main/resources/chunk.conf
@@ -1,7 +1,7 @@
 {
 	name: "First chunk file",
 	base_path: "src/test/resources/",
-	output_files_dir: ${user.dir},
+	output_files_dir: ${user.dir}/output/,
 	dump_file: "chunk_dump.wikirun",
 	print_approximation: true
 }
