--- a/src/main/resources/full.conf
+++ b/src/main/resources/full.conf
@@ -1,7 +1,7 @@
 {
 	name: "Full wikipedia dump",
-	base_path: "/data/wikipedia/",
-	output_files_dir: "/data/wikipedia/",
+	base_path: "/data/wikipedia/data/",
+	output_files_dir: "/data/wikipedia/results/last_output/",
 	dump_file: "production.wikirun",
 	print_approximation: false
 }
