--- a/src/main/resources/full_run.conf
+++ b/src/main/resources/full_run.conf
@@ -1,7 +1,6 @@
 {
-	name: "Full wikipedia dump",
-	base_path: "/data/wikipedia/full_run/",
-	output_files_dir: "/data/wikipedia/full_run/",
-	dump_file: "production.wikirun",
+	name: "Successful output from full wikipedia run",
+	base_path: "/data/wikipedia/data/",
+	output_files_dir: "/data/wikipedia/results/full_output/",
 	print_approximation: false
 }
