Add type for configuration.
Former-commit-id: affb3da7629d45f9adf8d0ff6757ea6d3291bda1

--- a/src/main/resources/chunk.conf
+++ b/src/main/resources/chunk.conf
@@ -1,5 +1,6 @@
 {
 	name: "First chunk file",
+	type: "file",
 	base_path: "src/test/resources/",
 	output_files_dir: ${user.dir}/output/,
 	dump_file: "chunk_dump.wikirun",
