--- a/src/main/resources/full.conf
+++ b/src/main/resources/full.conf
@@ -1,5 +1,6 @@
 {
 	name: "Full wikipedia dump",
+	type: "file",
 	base_path: "/data/wikipedia/data/",
 	output_files_dir: "/data/wikipedia/results/latest_output/",
 	dump_file: "production.wikirun",
