--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-scala</artifactId>
-			<version>0.7-incubating-SNAPSHOT</version>
+			<version>0.7-hadoop2-incubating-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients</artifactId>
-			<version>0.7-incubating-SNAPSHOT</version>
+			<version>0.7-hadoop2-incubating-SNAPSHOT</version>
 		</dependency>
 		<!-- Sweble for wikitext parsing -->
 		<dependency>
@@ -33,11 +33,11 @@
 			<version>1.1.0</version>
 		</dependency>
 		<!-- performance primitive collections for Java -->
-		<dependency>
-			<groupId>net.sf.trove4j</groupId>
-			<artifactId>trove4j</artifactId>
-			<version>3.0.3</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>net.sf.trove4j</groupId>-->
+			<!--<artifactId>trove4j</artifactId>-->
+			<!--<version>3.0.3</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
@@ -98,11 +98,27 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
 			</plugin>
-
+			<!-- Plugin for building the jars -->
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-jar-plugin</artifactId>-->
+				<!--<version>2.4</version>-->
+			<!--</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -112,6 +128,7 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<!-- Add scala support -->
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
