Read a whole hdfs dir at once.
Former-commit-id: 7fb10025a8d066c56445c01da08cd7adac34334e

--- a/src/main/resources/chunk_cluster.conf
+++ b/src/main/resources/chunk_cluster.conf
@@ -1,7 +1,7 @@
 {
   name: "First chunk file on cluster",
   type: "hdfs",
-  base_path: "hdfs://tenemhead2/home/stefan.bunk/data/",
+  base_path: "hdfs://tenemhead2/home/stefan.bunk/test",
   output_files_dir: "tenemhead2/home/stefan.bunk/results/",
   dump_file: "chunk_dump.wikirun",
   print_approximation: true
