--- a/src/main/resources/chunk.conf
+++ b/src/main/resources/chunk.conf
@@ -1,8 +1,7 @@
 {
 	name: "First chunk file",
 	type: "file",
-	base_path: "src/test/resources/",
+	base_path: "src/test/resources/chunk/",
 	output_files_dir: ${user.dir}/output/,
-	dump_file: "chunk_dump.wikirun",
 	print_approximation: true
 }
