--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-scala</artifactId>
-			<version>0.7-hadoop2-incubating-SNAPSHOT</version>
+			<version>0.7.0-hadoop2-incubating</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients</artifactId>
-			<version>0.7-hadoop2-incubating-SNAPSHOT</version>
+			<version>0.7.0-hadoop2-incubating</version>
 		</dependency>
 		<!-- Sweble for wikitext parsing -->
 		<dependency>
