--- a/pom.xml
+++ b/pom.xml
@@ -87,13 +87,13 @@
 			<name>Central Repository</name>
 			<url>http://repo.maven.apache.org/maven2</url>
 		</repository>
-		<repository>
-			<id>apache.snapshots</id>
-			<name>Apache Development Snapshot Repository</name>
-			<url>https://repository.apache.org/content/repositories/snapshots/</url>
-			<releases><enabled>false</enabled></releases>
-			<snapshots><enabled>true</enabled></snapshots>
-		</repository>
+		<!--<repository>-->
+			<!--<id>apache.snapshots</id>-->
+			<!--<name>Apache Development Snapshot Repository</name>-->
+			<!--<url>https://repository.apache.org/content/repositories/snapshots/</url>-->
+			<!--<releases><enabled>false</enabled></releases>-->
+			<!--<snapshots><enabled>true</enabled></snapshots>-->
+		<!--</repository>-->
 	</repositories>
 	<build>
 		<plugins>
