Rework job name.
Former-commit-id: 16ff20fe739acaee5a05f50d4023cc03f951694d

--- a/src/main/resources/chunk.conf
+++ b/src/main/resources/chunk.conf
@@ -1,5 +1,5 @@
 {
-	name: "First chunk file",
+	name: "chunk",
 	type: "file",
 	base_path: "src/test/resources/chunk/",
 	output_files_dir: ${user.dir}/output/,
