--- a/src/main/resources/full_cluster.conf
+++ b/src/main/resources/full_cluster.conf
@@ -1,5 +1,5 @@
 {
-  name: "Full wikipedia dump",
+  name: "full",
   type: "hdfs",
   base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
   output_files_dir: "tenemhead2/home/stefan.bunk/results/",
