--- a/src/main/resources/chunk_cluster.conf
+++ b/src/main/resources/chunk_cluster.conf
@@ -1,7 +1,7 @@
 {
-  name: "First chunk file on cluster",
+  name: "chunk",
   type: "hdfs",
-  base_path: "hdfs://tenemhead2/home/stefan.bunk/test",
+  base_path: "hdfs://tenemhead2/home/stefan.bunk/test_one_file",
   output_files_dir: "tenemhead2/home/stefan.bunk/results/",
   print_approximation: true
 }
