Reorganize files in hdfs.
Former-commit-id: 7c62579af8d2a512a0bde5eafbf5d162ca822cee

--- a/src/main/resources/chunk_cluster.conf
+++ b/src/main/resources/chunk_cluster.conf
@@ -1,7 +1,7 @@
 {
   name: "chunk",
   type: "hdfs",
-  base_path: "hdfs://tenemhead2/home/stefan.bunk/test_one_file",
-  output_files_dir: "tenemhead2/home/stefan.bunk/results/",
+  base_path: "hdfs://tenemhead2/home/stefan.bunk/test",
+  output_files_dir: "tenemhead2/home/stefan.bunk/test_results/",
   print_approximation: true
 }
