--- a/src/main/resources/full_cluster.conf
+++ b/src/main/resources/full_cluster.conf
@@ -1,7 +1,7 @@
 {
   name: "full",
   type: "hdfs",
-  base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
+  base_path: "hdfs://tenemhead2/home/stefan.bunk/test",
   output_files_dir: "tenemhead2/home/stefan.bunk/results/",
   print_approximation: false
 }
