Remove approximation stuff.
Former-commit-id: 76b73b81160f5b97e0ff743f9697b8273ae0aca3

--- a/src/main/resources/chunk.conf
+++ b/src/main/resources/chunk.conf
@@ -2,6 +2,5 @@
 	name: "chunk",
 	type: "file",
 	base_path: "src/test/resources/chunk/",
-	output_files_dir: ${user.dir}/output/,
-	print_approximation: true
+	output_files_dir: ${user.dir}/output/
 }
