--- a/src/main/resources/chunk_cluster.conf
+++ b/src/main/resources/chunk_cluster.conf
@@ -2,6 +2,5 @@
   name: "chunk",
   type: "hdfs",
   base_path: "hdfs://tenemhead2/home/stefan.bunk/test",
-  output_files_dir: "tenemhead2/home/stefan.bunk/test_results/",
-  print_approximation: true
+  output_files_dir: "tenemhead2/home/stefan.bunk/test_results/"
 }
