--- a/src/main/resources/full_cluster.conf
+++ b/src/main/resources/full_cluster.conf
@@ -2,6 +2,5 @@
   name: "full",
   type: "hdfs",
   base_path: "hdfs://tenemhead2/home/stefan.bunk/test",
-  output_files_dir: "tenemhead2/home/stefan.bunk/results/",
-  print_approximation: false
+  output_files_dir: "tenemhead2/home/stefan.bunk/results/"
 }
