--- a/src/main/resources/full.conf
+++ b/src/main/resources/full.conf
@@ -2,6 +2,5 @@
 	name: "full",
 	type: "file",
 	base_path: "/data/wikipedia/data/",
-	output_files_dir: "/data/wikipedia/results/latest_output/",
-	print_approximation: false
+	output_files_dir: "/data/wikipedia/results/latest_output/"
 }
