Fix wiki pages output file name.
Former-commit-id: b573753001249d66a93771bed98cd9d9c799676b

--- a/src/main/resources/full_cluster.conf
+++ b/src/main/resources/full_cluster.conf
@@ -1,6 +1,6 @@
 {
   name: "full",
   type: "hdfs",
-  base_path: "hdfs://tenemhead2/home/stefan.bunk/test",
+  base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
   output_files_dir: "tenemhead2/home/stefan.bunk/results/"
 }
