--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-scala</artifactId>
-			<version>0.7.0-hadoop2-incubating</version>
+			<version>0.8-incubating-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients</artifactId>
-			<version>0.7.0-hadoop2-incubating</version>
+			<version>0.8-incubating-SNAPSHOT</version>
 		</dependency>
 		<!-- Sweble for wikitext parsing -->
 		<dependency>
@@ -108,13 +108,13 @@
 			<name>project</name>
 			<url>file:${project.basedir}/lib</url>
 		</repository>
-		<!--<repository>-->
-			<!--<id>apache.snapshots</id>-->
-			<!--<name>Apache Development Snapshot Repository</name>-->
-			<!--<url>https://repository.apache.org/content/repositories/snapshots/</url>-->
-			<!--<releases><enabled>false</enabled></releases>-->
-			<!--<snapshots><enabled>true</enabled></snapshots>-->
-		<!--</repository>-->
+		<repository>
+			<id>apache.snapshots</id>
+			<name>Apache Development Snapshot Repository</name>
+			<url>https://repository.apache.org/content/repositories/snapshots/</url>
+			<releases><enabled>false</enabled></releases>
+			<snapshots><enabled>true</enabled></snapshots>
+		</repository>
 	</repositories>
 	<build>
 		<plugins>
