--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>swc-engine</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.ahocorasick</groupId>
+			<artifactId>ahocorasick</artifactId>
+			<version>0.2.4</version>
+		</dependency>
 		<!-- performance primitive collections for Java -->
 		<!--<dependency>-->
 			<!--<groupId>net.sf.trove4j</groupId>-->
