Try another trie implementation, but not really better.
Former-commit-id: 35da9201223cbfdda92ef411fad438e095949b75

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 			<!--<artifactId>memory-measurer</artifactId>-->
 			<!--<version>1.0</version>-->
 		<!--</dependency>-->
+		<dependency>
+			<groupId>aho-corasick</groupId>
+			<artifactId>aho-corasick</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
