--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-scala</artifactId>
 			<version>0.8-incubating-SNAPSHOT</version>
+			<!--<version>0.7-incubating-SNAPSHOT</version>-->
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
