Add Tonis trie implementation.
Former-commit-id: 7cff2cef774da547273f50305c5aef857324f07b

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>de.hpi.fgis</groupId>
+			<artifactId>utilities</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<!-- Flink dependencies -->
 		<dependency>
 			<groupId>org.apache.flink</groupId>
