--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,13 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-scala</artifactId>
-			<version>0.8.1</version>
+			<version>0.9.0-milestone-1</version>
 			<!--<version>0.7-incubating-SNAPSHOT</version>-->
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients</artifactId>
-			<version>0.8.1</version>
+			<version>0.9.0-milestone-1</version>
 		</dependency>
 		<!-- Sweble for wikitext parsing -->
 		<dependency>
