--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>flink-clients</artifactId>
 			<version>0.9.0-milestone-1</version>
 		</dependency>
+		<!-- Machine learning -->
+		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-stable</artifactId>
+			<version>3.6.12</version>
+		</dependency>
 		<!-- Sweble for wikitext parsing -->
 		<dependency>
 			<groupId>org.sweble.wikitext</groupId>
