Add maven runner for ml test suite and activate all algorithms.
Former-commit-id: bf1e65e0a16f790a6bb86b61f0be4a75e404ccce

--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,14 @@
 								<jvmArg>-Xmx10g</jvmArg>
 							</jvmArgs>
 						</launcher>
+						<launcher>
+							<id>MachineLearningTestSuite</id>
+							<mainClass>de.uni_potsdam.hpi.coheel.ml.MachineLearningTestSuite</mainClass>
+							<jvmArgs>
+								<jvmArg>-Xms10g</jvmArg>
+								<jvmArg>-Xmx10g</jvmArg>
+							</jvmArgs>
+						</launcher>
 					</launchers>
 				</configuration>
 				<executions>
