--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,23 @@
 			<artifactId>flink-clients</artifactId>
 			<version>0.9.0-milestone-1</version>
 		</dependency>
+		<!-- POS tagging -->
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.4.1</version>
+			<classifier>models</classifier>
+		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-parser</artifactId>
+			<version>3.4.1</version>
+		</dependency>
 		<!-- Machine learning -->
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
