--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>flink-clients</artifactId>
 			<version>0.9.0-milestone-1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-test-utils</artifactId>
+			<version>0.9.0-milestone-1</version>
+		</dependency>
 		<!-- POS tagging -->
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
