--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,18 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-scala</artifactId>
-			<version>0.9.0-milestone-1</version>
+			<version>0.9.0</version>
 			<!--<version>0.7-incubating-SNAPSHOT</version>-->
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients</artifactId>
-			<version>0.9.0-milestone-1</version>
+			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-test-utils</artifactId>
-			<version>0.9.0-milestone-1</version>
+			<version>0.9.0</version>
 		</dependency>
 		<!-- POS tagging -->
 		<dependency>
