Revert "Update to weka 3.7."
This reverts commit d9b2c38a66f29ee569625d9d9a9cfcfe27874261 [formerly aec4a17406482457b794dc1cf6f68eeb77b8b511].


Former-commit-id: ab785e51f366da3aaa44ae399c1cccf23af22441

--- a/pom.xml
+++ b/pom.xml
@@ -55,15 +55,10 @@
 			<version>3.4.1</version>
 		</dependency>
 		<!-- Machine learning -->
-		<!--<dependency>-->
-			<!--<groupId>nz.ac.waikato.cms.weka</groupId>-->
-			<!--<artifactId>weka-stable</artifactId>-->
-			<!--<version>3.6.12</version>-->
-		<!--</dependency>-->
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
-			<artifactId>weka-dev</artifactId>
-			<version>3.7.12</version>
+			<artifactId>weka-stable</artifactId>
+			<version>3.6.12</version>
 		</dependency>
 		<!-- Guava for utilities like range map (good point for removing if space/dependency issues) -->
 		<!--There's a shaded guava dependency in Flink, we'll use that one for now.-->
