--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
 			<version>4.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.5</version>
+		</dependency>
+		<dependency>
 			<groupId>com.googlecode.concurrent-trees</groupId>
 			<artifactId>concurrent-trees</artifactId>
 			<version>2.4.0</version>
