--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
 			<artifactId>stanford-parser</artifactId>
 			<version>3.4.1</version>
 		</dependency>
+		<!-- Graph library -->
+		<dependency>
+			<groupId>org.jgrapht</groupId>
+			<artifactId>jgrapht-core</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 		<!-- Machine learning -->
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
@@ -197,6 +203,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!--
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.4</version>
@@ -209,9 +216,6 @@
 					</execution>
 				</executions>
 				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
 					<archive>
 						<manifestFile>
 							src/main/resources/META-INF/MANIFEST.MF
@@ -222,12 +226,7 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<!-- Plugin for building the jars -->
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-jar-plugin</artifactId>-->
-				<!--<version>2.4</version>-->
-			<!--</plugin>-->
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
