Make path to models and trie halves configurable.
Former-commit-id: d0502525d0077f7058358e78ebb4d5d84c8d50fc

--- a/src/main/resources/full_cluster.conf
+++ b/src/main/resources/full_cluster.conf
@@ -2,5 +2,9 @@
   name: "full",
   type: "hdfs",
   base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
-  output_files_dir: "tenemhead2/home/stefan.bunk/results/"
+  output_files_dir: "tenemhead2/home/stefan.bunk/results/",
+  first_trie_half: "/home/hadoop10/data/coheel/12345",
+  second_trie_half: "/home/hadoop10/data/coheel/678910",
+  seed_model: "/home/hadoop10/data/coheel/RandomForest-10FN.model",
+  candidate_model: "/home/hadoop10/data/coheel/RandomForest-10FP.model"
 }
