Read independent train and test file in ml suite.
Former-commit-id: 00b3294b49e1af49bd5af3f58c5bbee06c41dcb9

--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,7 @@
 							<jvmArgs>
 								<jvmArg>-Xms7g</jvmArg>
 								<jvmArg>-Xmx7g</jvmArg>
+								<jvmArg>-verbosegc</jvmArg>
 							</jvmArgs>
 						</launcher>
 						<launcher>
