--- a/conf/flink-conf.yaml
+++ b/conf/flink-conf.yaml
@@ -1,3 +1,10 @@
-taskmanager.heartbeat-interval: 20000
+# Tenem Cluster
+taskmanager.heap.mb: 4500
+taskmanager.memory.fraction: 0.5 # This means 2.75 GB memory for user code
 
-jobmanager.max-heartbeat-delay-before-failure.sec: 300
+# General Settings
+taskmanager.numberOfTaskSlots: 1
+parallelism.default: 10
+jobmanager.web.history: 40
+akka.ask.timeout: 1440 min
+env.java.opts: "-Dfile.encoding=UTF-8 -Dcom.sun.management.jmxremote.port=3333 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false"
