Use fast random forest.

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
 			<artifactId>concurrent-trees</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>fastRandomForest</groupId>
+			<artifactId>fastRandomForest</artifactId>
+			<version>0.99</version>
+		</dependency>
 		<!-- Memore measurement for debugging -->
 		<!--<dependency>-->
 			<!--<groupId>memory-measurer</groupId>-->
