Update to weka dev fixes strange Scala compilation time assert error.

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,8 @@
 		<!-- Machine learning -->
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
-			<artifactId>weka-stable</artifactId>
-			<version>3.6.12</version>
+			<artifactId>weka-dev</artifactId>
+			<version>3.7.13</version>
 		</dependency>
 		<!-- Guava for utilities like range map (good point for removing if space/dependency issues) -->
 		<!--There's a shaded guava dependency in Flink, we'll use that one for now.-->
