--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.4</version>
@@ -230,6 +229,9 @@
 					</execution>
 				</executions>
 				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 					<archive>
 						<manifestFile>
 							src/main/resources/META-INF/MANIFEST.MF
@@ -240,7 +242,12 @@
 					</archive>
 				</configuration>
 			</plugin>
-			-->
+			<!-- Plugin for building the jars -->
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-jar-plugin</artifactId>-->
+				<!--<version>2.4</version>-->
+			<!--</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
