--- a/src/main/resources/cluster_tenem.conf
+++ b/src/main/resources/cluster_tenem.conf
@@ -5,6 +5,6 @@
   output_files_dir: "tenemhead2/home/stefan.bunk/results/",
   first_trie_half: "/home/hadoop10/data/coheel/12345",
   second_trie_half: "/home/hadoop10/data/coheel/678910",
-  seed_model: "/home/hadoop10/data/coheel/RandomForest-SEED.model",
-  candidate_model: "/home/hadoop10/data/coheel/FastRandomForest-CANDIDATE.model"
+  seed_model: "/home/hadoop10/data/coheel/RandomForest-SEED-and-CANDIDATE.model",
+  candidate_model: ""
 }
