--- a/src/main/resources/cluster_tenem.conf
+++ b/src/main/resources/cluster_tenem.conf
@@ -1,6 +1,7 @@
 {
   name: "full",
   type: "hdfs",
+  job_manager_host: "tenemhead2",
   base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
   output_files_dir: "tenemhead2/home/stefan.bunk/results/",
   first_trie_half: "/home/hadoop10/data/coheel/12345",
