add jobmanager port to aws config

--- a/src/main/resources/cluster_aws.conf
+++ b/src/main/resources/cluster_aws.conf
@@ -2,6 +2,7 @@
   name: "full",
   type: "hdfs",
   job_manager_host: "TODO: Insert host for AWS",
+  job_manager_port: "6123",
   base_path: "hdfs://${MASTER}/home/stefan.bunk/data",
   output_files_dir: "${MASTER}/home/stefan.bunk/results/",
   first_trie_half: "/root/coheel/12345",
