--- a/src/main/resources/cluster_tenem.conf
+++ b/src/main/resources/cluster_tenem.conf
@@ -2,6 +2,7 @@
   name: "full",
   type: "hdfs",
   job_manager_host: "tenemhead2",
+  job_manager_port: "41837",
   base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
   output_files_dir: "tenemhead2/home/stefan.bunk/results/",
   first_trie_half: "/home/hadoop10/data/coheel/12345",
