Do not depend on fastRandomForest anymore.

--- a/pom.xml
+++ b/pom.xml
@@ -153,14 +153,14 @@
 			<artifactId>concurrent-trees</artifactId>
 			<version>2.4.0</version>
 		</dependency>
-<!--
+		<!--
 		<dependency>
 			<groupId>fastRandomForest</groupId>
 			<artifactId>fastRandomForest</artifactId>
 			<version>0.99</version>
 		</dependency>
--->
-		<!-- Memore measurement for debugging -->
+		-->
+		<!-- Memory measurement for debugging -->
 		<!--<dependency>-->
 			<!--<groupId>memory-measurer</groupId>-->
 			<!--<artifactId>memory-measurer</artifactId>-->
