Clean up configuration file naming

--- a/src/main/resources/cluster_tenem.conf
+++ b/src/main/resources/cluster_tenem.conf
@@ -1,10 +1,10 @@
 {
-  name: "full",
-  type: "hdfs",
+  type: "cluster",
   job_manager_host: "tenemhead2",
   job_manager_port: "41837",
   base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
-  output_files_dir: "tenemhead2/home/stefan.bunk/results/",
+  output_files_dir: "hdfs://tenemhead2/home/stefan.bunk/results/",
+
   first_trie_half: "/home/hadoop10/data/coheel/12345",
   second_trie_half: "/home/hadoop10/data/coheel/678910",
   seed_model: "/home/hadoop10/data/coheel/RandomForest-SEED-and-CANDIDATE.model",
