--- a/src/main/resources/local.conf
+++ b/src/main/resources/local.conf
@@ -1,6 +1,5 @@
 {
-	name: "chunk",
-	type: "file",
+	type: "local",
 	base_path: "src/test/resources/chunk/",
 	output_files_dir: ${user.dir}/output/
 }
