--- a/src/main/resources/cluster_aws.conf
+++ b/src/main/resources/cluster_aws.conf
@@ -1,10 +1,10 @@
 {
-  name: "full",
-  type: "hdfs",
+  type: "cluster",
   job_manager_host: ${FLINK_JOB_MANAGER},
   job_manager_port: ${FLINK_JOB_MANAGER_PORT},
   base_path: "hdfs://"${HDFS_NAME_NODE}"/data/20151102",
-  output_files_dir: ${HDFS_NAME_NODE}/results/20151102/,
+  output_files_dir: "hdfs://"${HDFS_NAME_NODE}"/results/20151102/",
+
   first_trie_half: "/root/coheel/12345",
   second_trie_half: "/root/coheel/678910",
   seed_model: "/root/coheel/RandomForest-10FN.model",
