--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>flink-test-utils</artifactId>
 			<version>0.10.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-hadoop-compatibility</artifactId>
+			<version>0.10.0</version>
+		</dependency>
 		<!-- POS tagging -->
 		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
@@ -152,6 +157,11 @@
 			<groupId>com.googlecode.concurrent-trees</groupId>
 			<artifactId>concurrent-trees</artifactId>
 			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.umd</groupId>
+			<artifactId>cloud9</artifactId>
+			<version>2.0.1</version>
 		</dependency>
 		<!--
 		<dependency>
