--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
 			<artifactId>scopt_2.10</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+		<!-- Serialization -->
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-pickling_2.10</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 		<!-- tests -->
 		<dependency>
 			<groupId>junit</groupId>
