Run on old data.

--- a/src/main/resources/cluster_tenem.conf
+++ b/src/main/resources/cluster_tenem.conf
@@ -3,10 +3,10 @@
   job_manager_host: "tenemhead2",
   job_manager_port: "6123",
   base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
-  output_files_dir: "hdfs://tenemhead2/home/stefan.bunk/results/",
+  output_files_dir: "hdfs://tenemhead2/home/stefan.bunk/results_old/",
 
-  first_trie_half: "/home/hadoop10/data/coheel/12345",
-  second_trie_half: "/home/hadoop10/data/coheel/678910",
+  first_trie_half: "/home/hadoop10/data/coheel/12345.old",
+  second_trie_half: "/home/hadoop10/data/coheel/678910.old",
   seed_model: "/home/hadoop10/data/coheel/RandomForest-SEED-and-CANDIDATE.model",
   candidate_model: ""
 }
