--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
 			<artifactId>concurrent-trees</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jblas</groupId>
+			<artifactId>jblas</artifactId>
+			<version>1.2.4</version>
+		</dependency>
 		<!--
 		<dependency>
 			<groupId>fastRandomForest</groupId>
