Use breeze scala linear algebra lib.

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,11 @@
 			<artifactId>jblas</artifactId>
 			<version>1.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.scalanlp</groupId>
+			<artifactId>breeze_2.10</artifactId>
+			<version>0.10</version>
+		</dependency>
 		<!--
 		<dependency>
 			<groupId>fastRandomForest</groupId>
