--- a/src/main/resources/cluster_tenem.conf
+++ b/src/main/resources/cluster_tenem.conf
@@ -5,8 +5,8 @@
   base_path: "hdfs://tenemhead2/home/stefan.bunk/data",
   output_files_dir: "hdfs://tenemhead2/home/stefan.bunk/results/",
 
-  first_trie_half: "/home/hadoop10/data/coheel/12345.old",
-  second_trie_half: "/home/hadoop10/data/coheel/678910.old",
+  first_trie_half: "/home/hadoop10/data/coheel/12345",
+  second_trie_half: "/home/hadoop10/data/coheel/678910",
   seed_model: "/home/hadoop10/data/coheel/RandomForest-SEED-and-CANDIDATE.model",
   candidate_model: ""
 }
