Fix local conf again

--- a/src/main/resources/local.conf
+++ b/src/main/resources/local.conf
@@ -1,6 +1,5 @@
 {
 	type: "local",
-	base_path: ${user.dir}/raw-data/sample-tiny,
-	#base_path: ${user.dir}/prepared-data/sample-tiny,
-	output_files_dir: ${user.dir}/output2/
+	base_path: "src/test/resources/chunk/",
+	output_files_dir: ${user.dir}/output/
 }
